deployment/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unagency
  labels:
    app.kubernetes.io/part-of: unagency
    app.kubernetes.io/version: "1.0.0"
